2009-01-07  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* configure.ac:
	* ext/gnomevfs/gstgnomevfs.c: (plugin_init):
	Add plugin dependency for the gnomevfs modules.
	Fixes bug #566875.

2009-01-07  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* win32/common/libgstcdda.def:
	Add new symbol to the list of exported symbols.

2009-01-07  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/playback/gstplaybin2.c: (gst_play_bin_class_init),
	(gst_play_bin_set_uri), (gst_play_bin_set_suburi),
	(no_more_pads_cb), (drained_cb), (group_set_locked_state_unlocked),
	(activate_group), (deactivate_group), (groups_set_locked_state),
	(gst_play_bin_change_state):
	Fix some comments and docs.
	Post an error message when we fail to link the selector to the sink.
	Remove pushing of EOS, this seems unneeded. 
	Lock the state of deactivated groups so that they don't accidentally
	reactivate when the playbin2 state changes.
	Reuse uridecodebins.
	Unlock and relock state of groups when playbin goes to NULL.
	Fixes #566654.
	Fixes #566341.

	* gst/playback/gsturidecodebin.c: (pad_removed_cb), (type_found):
	Only do something in the pad removed callback when we are dealing with
	our sourcepads because the sinkpads don't have a ghostpad.

2009-01-07  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst-libs/gst/cdda/gstcddabasesrc.c:
	* gst-libs/gst/cdda/gstcddabasesrc.h:
	Make the GType of GstCDDABaseSrcMode public for bindings.
	Fixes bug #566837.

2009-01-06  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* configure.ac:
	* ext/libvisual/visual.c: (plugin_init):
	  Use new core API to make registry re-scan the plugin
	  whenever visualisations are added or removed (see #350477).

2009-01-06  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: José Alburquerque <jaalburqu svn gnome org>

	* gst-libs/gst/audio/gstaudioclock.c: (gst_audio_clock_new):
	* gst-libs/gst/audio/gstaudioclock.h:
	Make gst_audio_clock_new use const gchar* to ease the wrapping of